playbooks/argocd/applications/observability/splunk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splunk
  namespace: splunk
  labels:
    app: splunk
spec:
  type: ClusterIP
  selector:
    app: splunk
  ports:
    - name: web
      port: 8000
      targetPort: web
      protocol: TCP
    - name: mgmt
      port: 8089
      targetPort: mgmt
      protocol: TCP
