playbooks/argocd/applications/observability/splunk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk
  namespace: splunk
  labels:
    app: splunk
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - splunk.soyspray.vip
      secretName: splunk-tls
  rules:
    - host: splunk.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk
                port:
                  number: 8000
